--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -48,6 +48,7 @@ $font-03: 'Selima', $sans-serif-fb;
 
 $icon-check: \f00c;
 $icon-check-circle: \f058;
+$icon-chevron-left: \f053;
 $icon-chevron-right: \f054;
 $icon-clone: \f24d;
 $icon-cogs: \f085;
@@ -77,7 +78,7 @@ $icon-youtube: \f16a;
 
 /* Other
 
-   ffi = form field indent	
+   ffi = form field indent
    ffs = form field spacing
 ========================================================================== */
 
