--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
@@ -224,16 +224,15 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 }
 
 .cp-main {
-	label[for*='_width'], label[for*='_height'] {
-		margin: 0 $ffs 0 0;
-	}
-	#avatar_option_avatar_driver_gravatar, #avatar_option_avatar_driver_local,
-	#avatar_option_avatar_driver_remote, #avatar_option_avatar_driver_upload {
-		& > p {
-			margin: -10px 0 20px $ffi-01;
-			font-style: italic;
-			font-size: rem(13px);
+	fieldset dl dd {
+		label[for*='_width'], label[for*='_height'] {
+			margin: 0 $ffs 0 0;
 		}
+	}
+	[id*='avatar_option_avatar_driver'] > p {
+		margin: -10px 0 20px $ffi-01;
+		font-style: italic;
+		font-size: rem(13px);
 	}
 	#avatar_option_avatar_driver_local {
 		fieldset {
